# SGA-Interface

./: README.md  game_screens.py  pyproject.toml  snake-game.py
Interface/: game_screens.py  snake-game.py
interface/: game_screens.py  snake_game.py
interface+game_logic/: game_screens.py  snake-game.py
tests/: gpio_subscriber.py  int_array_subscriber.py  mqtt_subscriber.py  serial_receiver.py
