[tool.poetry]
name = "sga-interface"
version = "2.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruff = "0.7.0"
pyserial = "3.5"
pygame = "2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
